Corrección de formato de documento para MS Office 2016

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/_legal.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/_legal.cshtml
@@ -1,4 +1,4 @@
-﻿<ul style="list-style-type: disc;">
+﻿<ul style="list-style-type: disc; margin-left: ${MARGIN_LEFT.OL};">
     <li>
         Constitución Política del Perú de 1993.
         <a style="mso-footnote-id: foot_constitucion" href="#_foot_constitucion" title="">
