--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/_tmpl.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/_tmpl.cshtml
@@ -97,7 +97,7 @@
 
 {{if FLG_GRAVEDAD_RIESGO}}
 <h5><u><strong>Determinación de la gravedad y/o riesgo generado</strong></u></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="text-align: center; border: 1px solid #000;"><strong>Normativa</strong></th>
@@ -129,7 +129,7 @@
         De acuerdo con el reporte de antecedentes de fecha XX, se advierte que, el/la Titular no fue sancionada anteriormente por el OSINFOR, y no se identifican agravantes y atenuantes aplicables, en consecuencia, las infracciones acreditadas son pasibles de ser sancionadas de la siguiente manera:
     </li>
 </ol>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="text-align: center; border: 1px solid #000;"><strong>Infracción</strong></th>
@@ -185,7 +185,7 @@
                         <div style="text-align: center;">
                             <strong>Cuadro N° XX: Ubicación de la extracción no autorizada</strong>
                         </div>
-                        <table cellpadding="0" cellspacing="0" style="width: 500px; margin: 0; border-collapse: collapse;">
+                        <table cellpadding="0" cellspacing="0" style="width: 100%; margin: 0; border-collapse: collapse;">
                             <thead>
                                 <tr style="background: #f0f0f0;">
                                     <th style="text-align: center; border: 1px solid #000; padding: 7px;">N°</th>
@@ -215,7 +215,7 @@
                         <div style="text-align: center;">
                             <strong>Cuadro N° XX: Ubicación de retiro de cobertura vegetal</strong>
                         </div>
-                        <table cellpadding="0" cellspacing="0" style="width: 500px; margin: 0; border-collapse: collapse;">
+                        <table cellpadding="0" cellspacing="0" style="width: 100%; margin: 0; border-collapse: collapse;">
                             <thead>
                                 <tr style="background: #f0f0f0;">
                                     <th style="text-align: center; border: 1px solid #000; padding: 7px;" rowspan="2">N°</th>
@@ -250,7 +250,7 @@
                         <div style="text-align: center;">
                             <strong>Cuadro N° XX: Número de individuos de regeneración natural a manejar referido a la extracción no autorizada</strong>
                         </div>
-                        <table cellpadding="0" cellspacing="0" style="width: 500px; margin: 0; border-collapse: collapse;">
+                        <table cellpadding="0" cellspacing="0" style="width: 100%; margin: 0; border-collapse: collapse;">
                             <thead>
                                 <tr style="background: #f0f0f0;">
                                     <th style="text-align: center; border: 1px solid #000; padding: 7px;" rowspan="3">Especie</th>
@@ -294,7 +294,7 @@
                         <div style="text-align: center;">
                             <strong>Cuadro N° XX: Número de individuos de regeneración natural a manejar referido al volumen injustificado</strong>
                         </div>
-                        <table cellpadding="0" cellspacing="0" style="width: 500px; margin: 0; border-collapse: collapse;">
+                        <table cellpadding="0" cellspacing="0" style="width: 100%; margin: 0; border-collapse: collapse;">
                             <thead>
                                 <tr style="background: #f0f0f0;">
                                     <th style="text-align: center; border: 1px solid #000; padding: 7px;" rowspan="3">Especie</th>
@@ -335,7 +335,7 @@
                         <div style="text-align: center;">
                             <strong>Cuadro N° XX: Cantidad de plantas a instalar en el área afectada</strong>
                         </div>
-                        <table cellpadding="0" cellspacing="0" style="width: 500px; margin: 0; border-collapse: collapse;">
+                        <table cellpadding="0" cellspacing="0" style="width: 100%; margin: 0; border-collapse: collapse;">
                             <thead>
                                 <tr style="background: #f0f0f0;">
                                     <th style="text-align: center; border: 1px solid #000; padding: 7px;">N°</th>
@@ -416,7 +416,7 @@
     <li>
         <span>
             Se debe señalar que mediante la Resolución Sub Directoral N° ${ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se dispusieron medidas cautelares, las cuales fueron confirmadas mediante la Resolución Sub Directoral N° XXXXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX de XXXX, conforme al siguiente detalle:
-            <ul style="color: green;">
+            <ul style="margin-left: 25px;">
                 <li>
                     (Detallar las medidas correctivas dispuestas).
                 </li>
@@ -446,7 +446,7 @@
 
 {{if FLG_COMUNICACION_GORE}}
 <h5><u><strong>Comunicación al GORE y/o otras autoridades</strong></u></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="border: 1px solid #000; text-align: center;"><strong>Entidad</strong></th>
