--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
@@ -96,7 +96,7 @@
 
 {{if FLG_GRAVEDAD_RIESGO}}
 <h5><u><strong>Determinación de la gravedad y/o riesgo generado</strong></u></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="text-align: center; border: 1px solid #000;"><strong>Normativa</strong></th>
@@ -128,7 +128,7 @@
         De acuerdo con el reporte de antecedentes de fecha XX, se advierte que, el/la Titular no fue sancionada anteriormente por el OSINFOR, y no se identifican agravantes y atenuantes aplicables. En consecuencia, las infracciones acreditadas son pasibles de ser sancionadas de la siguiente manera:
     </li>
 </ol>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="text-align: center; border: 1px solid #000;"><strong>Infracción</strong></th>
@@ -210,7 +210,7 @@
 
 {{if FLG_COMUNICACION_GORE}}
 <h5><u><strong>Comunicación al GORE y/o otras autoridades</strong></u></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="border: 1px solid #000; text-align: center;"><strong>Entidad</strong></th>
