--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_14.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_14.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
@@ -46,7 +46,7 @@
     <li>
         <span>
             Respecto a lo señalado por el/la concesionario/a, se advierte el siguiente análisis:
-            <ul>
+            <ul style="margin-left: 25px;">
                 <li>
                     Con relación al argumento señalado en el acápite a), <strong>XXXXXXXXXXXXXXXXXXXXXXXXXXX</strong>.
                 </li>
@@ -68,7 +68,7 @@
             <br /><br />
             Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
             <br /><br />
-            <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
+            <table width="100%" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
                 <thead>
                     <tr style="background-color: #bfbfbf;">
                         <th style="text-align: center; border: 1px solid #000;">
@@ -137,7 +137,7 @@
             <div>
                 Mediante el Proveído de Archivo de Informe de Supervisión N° xxx-20xx-OSINFOR/08.2.2, se dictaron al titular  xx mandatos relacionados al manejo de fauna silvestre, conforme al siguiente detalle:
             </div>
-            <ul>
+            <ul style="margin-left: 25px;">
                 <li><strong>Mandato N° 01:</strong> “xx</li>
                 <li><strong>Mandato N° 02:</strong> “xx</li>
             </ul>
@@ -150,7 +150,7 @@
         <span>
             Al respecto, en el numeral xx (Del Cumplimiento de mandatos y medidas correctivas) del Informe de Supervisión N° 00xx-20xx-OSINFOR/08.1.2, del xx de xxx de 20xx la DSFFS señala lo siguiente:
 
-            <ul>
+            <ul style="margin-left: 25px;">
                 <li>
                     “(…) xx”.
                 </li>
@@ -169,7 +169,7 @@
     <strong>Plazo para la Implementación del Mandato N° 01</strong>
 </p>
 
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Notificación del Proveído N° de Archivo de Informe de Supervisión N° 0xx-20xx-OSINFOR/08.2.2</th>
@@ -192,7 +192,7 @@
     <strong>Plazo para la Implementación del Mandato N° 02</strong>
 </p>
 
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Notificación del Proveído N° de Archivo de Informe de Supervisión N° 0xx-20xx-OSINFOR/08.2.2</th>
