--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_7.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_7.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
@@ -46,7 +46,7 @@
     <li>
         <span>
             Respecto a lo señalado por el/la concesionario/a, se advierte el siguiente análisis:
-            <ul>
+            <ul style="margin-left: 25px;">
                 <li>
                     Con relación al argumento señalado en el acápite a), <strong>XXXXXXXXXXXXXXXXXXXXXXXXXXX</strong>.
                 </li>
@@ -70,8 +70,9 @@
             </div>
             <div>
                 Por lo que en el presente caso, se evidencia que el/la administrada/o no ha informado el egreso de  XX, como se observa del Balance de ingresos y egresos, donde no se advierte la situación de estas especies; se debe precisar que la administrada presentó toda documentación que acredita la posesión de distintas especies, así como toda documentación sobre los egresos de las mismas; sin embargo, en ninguno de estos documentos se advierte la situación de los mencionados especímenes, por lo que al evidenciarse que la administrada debe poseer estas especies y al advertir que estas no se encontraron al momento de la supervisión, se puede concluir que el/la administrada/o no ha informado sobre el egreso de las especies antes citadas.
-            </div>            
-            <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
+            </div>
+            <br />
+            <table width="100%" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
                 <thead>
                     <tr style="background-color: #bfbfbf;">
                         <th style="text-align: center; border: 1px solid #000;">
@@ -100,7 +101,7 @@
                 <tbody>
                     {{each(a, b) [1,2,3,4,5,6]}}
                     <tr>
-                        <td style="border: 1px solid #000; text-align: center;"></td>
+                        <td style="border: 1px solid #000; text-align: center;">XX</td>
                         <td style="border: 1px solid #000; text-align: center;"></td>
                         <td style="border: 1px solid #000; text-align: center;"></td>
                         <td style="border: 1px solid #000; text-align: center;"></td>
