--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/_tmpl.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/_tmpl.cshtml
@@ -96,7 +96,7 @@
 
 {{if FLG_GRAVEDAD_RIESGO}}
 <h5><u><strong>Determinación de la gravedad y/o riesgo generado</strong></u></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="text-align: center; border: 1px solid #000;"><strong>Normativa</strong></th>
@@ -128,7 +128,7 @@
         De acuerdo con el reporte de antecedentes de fecha XX, se advierte que, el/la Titular no fue sancionada anteriormente por el OSINFOR, y no se identifican agravantes y atenuantes aplicables, en consecuencia, las infracciones acreditadas son pasibles de ser sancionadas de la siguiente manera:
     </li>   
 </ol>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="text-align: center; border: 1px solid #000;"><strong>Infracción</strong></th>
@@ -206,7 +206,7 @@
     <li>
         <span>
             Se debe señalar que mediante la Resolución Sub Directoral N° ${ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se dispusieron medidas cautelares, las cuales fueron confirmadas mediante la Resolución Sub Directoral N° XXXXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX de XXXX, conforme al siguiente detalle:
-            <ul style="color: green;">
+            <ul style="margin-left: 25px;">
                 <li>
                     (Detallar las medidas correctivas dispuestas).
                 </li>
@@ -236,7 +236,7 @@
 
 {{if FLG_COMUNICACION_GORE}}
 <h5><u><strong>Comunicación al GORE y/o otras autoridades</strong></u></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr>
             <th style="border: 1px solid #000; text-align: center;"><strong>Entidad</strong></th>
