--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -178,7 +178,7 @@
                         </span>
                     </li>
                 </ol>
-                <table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+                <table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
                     <thead>
                         <tr>
                             <th style="border: 1px solid #000; text-align: center;">N°</th>
@@ -272,7 +272,7 @@
 @Html.Partial("~/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplFootnotes.cshtml")
 
 <script id="tmpl-pie-pagina" type="text/x-jquery-tmpl">
-    <img width="600" alt="" src="${urlLocalSigo}content/images/logo/osinfor-footer-punche.png" />
+    <img width="600" height="60" alt="" src="${urlLocalSigo}content/images/logo/osinfor-footer-punche.png" />
     <div>
         Esta es una copia auténtica imprimible de un documento electrónico archivado en el Organismo de Supervisión de los Recursos Forestales y
         de Fauna Silvestre, aplicando lo dispuesto por el Art. 25 de D.S. 070 – 2013 PCM y la Tercera Disposición Complementaria Final del D.S. 026-
