--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_11.cshtml
@@ -47,7 +47,7 @@
     <li>
         <span>
             Respecto a lo señalado por el/la concesionario/a, se advierte el siguiente análisis:
-            <ul>
+            <ul style="margin-left: 25px;">
                 <li>
                     Con relación al argumento señalado en el acápite a), <strong>XXXXXXXXXXXXXXXXXXXXXXXXXXX</strong>.
                 </li>
