--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_29.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_29.cshtml
@@ -47,7 +47,7 @@
     <li>
         <span>
             Respecto a lo señalado por el/la concesionario/a, se advierte el siguiente análisis:<br />
-            <ul>
+           <ul style="margin-left: 25px;">
                 <li>
                     Con relación al argumento señalado en el acápite a), <strong>XXXXXXXXXXXXXXXXXXXXXXXXXXX</strong>.
                 </li>
@@ -64,7 +64,7 @@
     <li>
         <span>
             En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo, ha quedado acreditado lo siguiente:<br />
-            <ul>
+            <ul style="margin-left: 25px;">
                 <li>
                     Mediante Carta N° ${informe.ANTECEDENTES_DOCS.Carta.numero || 'XXXXX-XXXX-OSINFOR/08.1'}, de fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto || 'XX de XXXX de XXXX'}, notificada el ${informe.ANTECEDENTES_DOCS.Carta.fechaNotificacionTexto || 'XX de XXXX de XXXX'}, la DSFFS solicitó al/la concesionario/a el contrato de regencia en el marco de la implementación del plan de manejo forestal, no habiendo remitido hasta la fecha.
                 </li>
