--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_21.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_21.cshtml
@@ -47,7 +47,7 @@
     <li>
         <span>
             Respecto a lo señalado por el/la concesionario/a, se advierte el siguiente análisis:
-            <ul>
+            <ul style="margin-left: 25px;">
                 <li>
                     Con relación al argumento señalado en el acápite a), <strong>XXXXXXXXXXXXXXXXXXXXXXXXXXX</strong>.
                 </li>
@@ -70,7 +70,7 @@
     </li>
 </ol>
 
-<table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
+<table width="100%" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">
