Correccion de formato para infracciones duplicadas en IFI

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_2.cshtml
@@ -167,6 +167,23 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
+                No Maderable
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                No cumplió
+            </td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #000;">
                 Maderable
             </td>
             <td style="border: 1px solid #000;">
