--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_2.cshtml
@@ -167,8 +167,7 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                No maderable (castaña)
-                Maderable
+                No maderable (castaña)                
             </td>
             <td style="border: 1px solid #000;">
                 XX
@@ -181,6 +180,23 @@
             </td>
             <td style="border: 1px solid #000;">
                 Si/No cumplió
+            </td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #000;">
+                Maderable
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                No cumplió
             </td>
         </tr>
     </tbody>
