--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_2.cshtml
@@ -168,6 +168,22 @@
             </td>
             <td style="border: 1px solid #000;">
                 No maderable (castaña)
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                XX
+            </td>
+            <td style="border: 1px solid #000;">
+                Si/No cumplió
+            </td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #000;">
                 Maderable
             </td>
             <td style="border: 1px solid #000;">
