correcciones para carga de archivos de editor de texto

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
@@ -3,7 +3,7 @@
 }
 <link href="~/Areas/Fiscalizacion/css/InformeLegal/IFIDigital.css?v=1" rel="stylesheet" />
 <script src="~/Scripts/vue.min.js"></script>
-@*<script src="~/Scripts/ckeditor5/ckeditor.js"></script>*@
+<script src="~/Scripts/ckeditor5/ckeditor.js"></script>
 <script src="~/Scripts/jquery.tmpl.min.js"></script>
 <script src="~/Scripts/jquery.googoose.js?v=8"></script>
 <script src="~/Scripts/pdfjs/pdf.min.js"></script>
@@ -20,8 +20,8 @@
     }
 </script>
 <script src="~/Areas/General/js/Informes/general.js?v=1"></script>
-@*<script src="~/Scripts/ckeditor5/config.js?v=1"></script>*@
-@*<script src="~/Areas/General/js/Informes/components.js?v=1"></script>*@
+<script src="~/Scripts/ckeditor5/config.js?v=1"></script>
+<script src="~/Areas/General/js/Informes/components.js?v=1"></script>
 <script src="~/Areas/Fiscalizacion/js/InformeLegal/IFI.js?noCache=@Guid.NewGuid().ToString()" type="text/javascript"></script>
 
 <div id="frmInforme" class="card loading">
