--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDInforme.cshtml
@@ -114,7 +114,7 @@
     </table>
 </script>
 
-<script id="tmpl-vistos" type="text/x-jquery-tmpl">    
+<script id="tmpl-vistos" type="text/x-jquery-tmpl">
     <p>Los siguientes documentos:</p>
     <table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
         <thead>
@@ -660,7 +660,7 @@
             <thead>
                 <tr>
                     <th style="border: 1px solid #000; text-align: center;">N°</th>
-                    <th style="border: 1px solid #000; text-align: center;">Conducta imputad</th>
+                    <th style="border: 1px solid #000; text-align: center;">Conducta imputada</th>
                     <th style="border: 1px solid #000; text-align: center;">Causal de caducidad</th>
                 </tr>
             </thead>
@@ -774,6 +774,12 @@
             <strong>Artículo.</strong> Adjuntar al expediente que se genere el récord de sanciones administrativas a la xx, que pueda existir en el OSINFOR.
         </p>
     </div>
+</script>
+
+<script id="tmpl-encabezado" type="text/x-jquery-tmpl">
+    <p style="text-align:center;">
+        <img height="200" width="200" alt="" src="${URL_APLICACION}content/images/logo/escudo-peruano.jpg">
+    </p>
 </script>
 
 <script id="tmpl-pie-pagina" type="text/x-jquery-tmpl">
