--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_tmpl.cshtml
@@ -113,7 +113,10 @@
                     Conforme a los resultados del Informe de Supervisión, la extracción de XX m3 de madera provenientes de árboles no autorizados, representa una afectación de XX hectáreas (XX hectáreas/m3 no autorizado) de nivel XX a la cobertura boscosa, la cual forma parte del Patrimonio Forestal Nacional.
                 </div>
                 <div>
-                    Cabe señalar que, las especies en cuestión no se encuentran incluidas en la lista de Clasificación Oficial de Especies Amenazadas de Flora Silvestre, aprobada mediante Decreto Supremo N° 043-2006-AG.
+                    Cabe señalar que, las especies en cuestión no se encuentran incluidas en la lista de Clasificación Oficial de Especies Amenazadas de Flora Silvestre, aprobada mediante Decreto Supremo N° 043-2006-AG
+                    <a style="mso-footnote-id: foot_decreto_supremo_1" href="#_foot_decreto_supremo_1" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>.
                 </div>
             </td>
         </tr>
@@ -122,10 +125,22 @@
 {{/if}}
 
 {{if FLG_SANCION}}
-<h5><u><strong>Sobre la imposición de sanción, atenuantes y agravantes</strong></u></h5>
+<h5>
+    <u>
+        <strong>
+            <span>Sobre la imposición de sanción</span>
+            <a style="mso-footnote-id: foot_sancion_titulo" href="#_foot_sancion_titulo" title="">
+                <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+            </a>, atenuantes y agravantes
+        </strong>
+    </u>
+</h5>
 <ol class="continue" style="margin-left: ${MARGIN_LEFT.OL};">
     <li>
-        De acuerdo con el reporte de antecedentes de fecha XX, se advierte que, el/la Titular no fue sancionada anteriormente por el OSINFOR, y no se identifican agravantes y atenuantes aplicables. En consecuencia, las infracciones acreditadas son pasibles de ser sancionadas de la siguiente manera:
+        <span>De acuerdo con el reporte de antecedentes</span>
+        <a style="mso-footnote-id: foot_reporte_antecedentes" href="#_foot_reporte_antecedentes" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> de fecha XX, se advierte que, el/la Titular no fue sancionada anteriormente por el OSINFOR, y no se identifican agravantes y atenuantes aplicables, en consecuencia, las infracciones acreditadas son pasibles de ser sancionadas de la siguiente manera:
     </li>
 </ol>
 <table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
@@ -148,6 +163,16 @@
         </tr>
         {{/each}}
     </tbody>
+    <tfoot>
+        <tr>
+            <td style="border: 1px solid #000; text-align: center;">
+                <strong>Total Sanción de Multa</strong>
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">
+                <strong>${SANCION_UIT || 'XX'} UIT</strong>
+            </td>
+        </tr>
+    </tfoot>
 </table>
 {{/if}}
 
