--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplFootnotes.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplFootnotes.cshtml
@@ -68,6 +68,62 @@
             </div>
         </div>
 
+        <div style="mso-element: footnote;" id="foot_decreto_supremo_1">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_decreto_supremo_1;" href="#_foot_decreto_supremo_1" name="_foot_decreto_supremo_1">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &emsp;Decreto Supremo 043-2006-AG: Aprueban Categorización de Especies Amenazadas de Flora Silvestre.
+                </p>
+            </div>
+        </div>
+
+        <div style="mso-element: footnote;" id="foot_sancion_titulo">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_sancion_titulo;" href="#_foot_sancion_titulo" name="_foot_sancion_titulo">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &emsp;
+                    Cabe indicar que mediante Resolución Presidencial N° 021-2018-OSINFOR, de fecha 14 de febrero de 2018, el OSINFOR aprobó la “Metodología de Cálculo del Monto de las Multas a imponer por el Organismo de Supervisión de los Recursos Forestales y de Fauna Silvestre – OSINFOR, por infracciones a la Legislación Forestal y de Fauna Silvestre”, que establece una metodología para el cálculo y la graduación de multas a imponerse.
+                    <br />
+                    De acuerdo al artículo 2 de la Resolución Presidencial N° 021-2018-OSINFOR, la Metodología aprobada “es de aplicación inmediata a los procedimientos administrativos únicos en trámite bajo los alcances de la Ley Nº 29763 y sus Reglamentos (…)”, entendiéndose por aplicación inmediata a aquella que “(…) se hace a los hechos, relaciones y situaciones que ocurren mientras tiene vigencia, es decir, entre el momento en que entra en vigencia y aquel en que es derogada o modificada”.
+                    <br />
+                    Dicha metodología se encuentra adecuada a los “Lineamientos para la aplicación de los criterios de gradualidad para la imposición de la sanción pecuniaria” aprobados por el SERFOR, mediante la Resolución de Dirección Ejecutiva N° 004-2018-SERFOR-DE, respecto al cálculo de la multa por infracciones a la legislación forestal y de fauna silvestre, bajo los criterios de gradualidad estipulados normativamente.
+                </p>
+            </div>
+        </div>
+
+        <div style="mso-element: footnote;" id="foot_reporte_antecedentes">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_reporte_antecedentes;" href="#_foot_reporte_antecedentes" name="_foot_reporte_antecedentes">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &emsp;De la revisión del siguiente link: https://sigo-sfcv3.osinfor.gob.pe/General/Reportes/Rpt_Historial_Titulo_Habilitante
+                </p>
+            </div>
+        </div>
+
+        <div style="mso-element: footnote;" id="foot_DSFFS">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_DSFFS;" href="#_foot_DSFFS" name="_foot_DSFFS">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &emsp;<strong>
+                        Reglamento de Organización y Funciones del OSINFOR, aprobado por Decreto Supremo N° 029-2017-PCM
+                        Artículo 34.- Funciones de la Dirección de Supervisión Forestal y de Fauna Silvestre
+                    </strong>
+                    <br />
+                    La Dirección de Supervisión Forestal y de Fauna Silvestre tiene las siguientes funciones: (…)
+                    <br />
+                    d) Supervisar el cumplimiento de las medidas correctivas y otras disposiciones dictadas por los Órganos de Línea correspondiente en el marco de sus competencias.
+                </p>
+            </div>
+        </div>
+
         {{if COD_MODALIDAD == "01"}}
         @Html.Partial("~/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/_footnotes.cshtml")
 
